; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_moniker.c_count_moniker_matches.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_moniker.c_count_moniker_matches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i64 0, align 8
@wszFileName1 = common dso_local global i32 0, align 4
@wszFileName2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Total number of monikers is %i\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @count_moniker_matches to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @count_moniker_matches(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %10

10:                                               ; preds = %40, %2
  %11 = load i32*, i32** %4, align 8
  %12 = call i64 @IEnumMoniker_Next(i32* %11, i32 1, i32** %5, i32* null)
  %13 = load i64, i64* @S_OK, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %41

15:                                               ; preds = %10
  %16 = load i32, i32* %6, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %6, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @IMoniker_GetDisplayName(i32* %18, i32* %19, i32* null, i32** %9)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i64 @SUCCEEDED(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %40

24:                                               ; preds = %15
  %25 = load i32*, i32** %9, align 8
  %26 = load i32, i32* @wszFileName1, align 4
  %27 = call i32 @lstrcmpiW(i32* %25, i32 %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %24
  %30 = load i32*, i32** %9, align 8
  %31 = load i32, i32* @wszFileName2, align 4
  %32 = call i32 @lstrcmpiW(i32* %30, i32 %31)
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %37, label %34

34:                                               ; preds = %29, %24
  %35 = load i32, i32* %7, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %7, align 4
  br label %37

37:                                               ; preds = %34, %29
  %38 = load i32*, i32** %9, align 8
  %39 = call i32 @CoTaskMemFree(i32* %38)
  br label %40

40:                                               ; preds = %37, %15
  br label %10

41:                                               ; preds = %10
  %42 = load i32, i32* %6, align 4
  %43 = call i32 @trace(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %42)
  %44 = load i32, i32* %7, align 4
  ret i32 %44
}

declare dso_local i64 @IEnumMoniker_Next(i32*, i32, i32**, i32*) #1

declare dso_local i32 @IMoniker_GetDisplayName(i32*, i32*, i32*, i32**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @lstrcmpiW(i32*, i32) #1

declare dso_local i32 @CoTaskMemFree(i32*) #1

declare dso_local i32 @trace(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
